stdlib.h: Add noreturn attribute to exit and _Exit.

Fixes #15110.